force-app/main/default/objects/Disposition__c/fields/Gross_Sale_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sale_Proceeds__c</fullName>
    <label>Gross Sale Proceeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>