force-app/main/default/objects/Disposition__c/fields/LOI_Counter_Price__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see Primary_LOI__c
        .field-meta.xml in this folder for the full reasoning behind this field group.

        ADDED 2026-08-25. One of NINE formula fields mirroring the primary LOI / primary PSA
        onto Disposition__c, shaped on the five NDA_*__c fields already here.

        THE BUYER'S COUNTER, paired on the section with LOI_Counter_Received_Date__c beside it - a
        counter amount with no date, or a date with no amount, is the shape that tells a reader
        the counter-offer card was only half filled in.

        🔴 formulaTreatBlanksAs = BlankAsBlank, NOT the BlankAsZero the neighbouring
        Net_Sale_Proceeds__c uses, AND THE DIFFERENCE IS LOAD-BEARING. Net_Sale_Proceeds__c
        SUBTRACTS two fields and genuinely wants a missing cost to count as zero. This field is
        a bare cross-object reference: with BlankAsZero a disposition with no primary LOI would
        render a confident $0.00 where the honest answer is "no LOI yet", and $0.00 on a price
        field is a statement about the deal, not about the data. Blank is the only correct
        rendering for every pre-LOI stage, which is most of them.

        precision 18 / scale 2 match the source field on LOI__c exactly - a narrower scale here
        would silently round a real price.

        🔴 FLS: read-only in BOTH DPEG_Disposition_Edit and DPEG_Disposition_View - a formula
        field cannot carry editable = true (hard deploy error). Invisible to everyone, admins
        included, until those permission sets land with this file.
    -->
    <fullName>LOI_Counter_Price__c</fullName>
    <description>The primary LOI's Counter_Price__c, read through Primary_LOI__c. Blank before a primary LOI exists or before a counter is received.</description>
    <formula>Primary_LOI__r.Counter_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>The countered price on the primary LOI. Blank if no counter has been received. Read-only; derived.</inlineHelpText>
    <label>LOI Counter Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>