force-app/main/default/objects/Disposition__c/fields/LOI_Counter_Received_Date__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see Primary_LOI__c
        .field-meta.xml in this folder for the full reasoning behind this field group.

        ADDED 2026-08-25. One of NINE formula fields mirroring the primary LOI / primary PSA
        onto Disposition__c. Shape copied from NDA_Date_Sent__c in this folder: a Date formula
        that is a bare cross-object reference carries NO formulaTreatBlanksAs - there is no
        arithmetic for it to affect, and a null parent renders blank.

        Date, not DateTime, and the name says Date accordingly (ARCHITECTURE.md section 1). The
        source field LOI__c.Counter_Received_Date__c is itself a Date.

        🔴 FLS: read-only in BOTH DPEG_Disposition_Edit and DPEG_Disposition_View - a formula
        field cannot carry editable = true (hard deploy error). Invisible to everyone, admins
        included, until those permission sets land with this file.
    -->
    <fullName>LOI_Counter_Received_Date__c</fullName>
    <description>The primary LOI's Counter_Received_Date__c, read through Primary_LOI__c. Blank before a primary LOI exists or before a counter is received.</description>
    <formula>Primary_LOI__r.Counter_Received_Date__c</formula>
    <inlineHelpText>The date a counter was received on the primary LOI. Read-only; derived.</inlineHelpText>
    <label>LOI Counter Received Date</label>
    <type>Date</type>
</CustomField>