force-app/main/default/objects/Disposition__c/fields/LOI_Signed_Date__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see Primary_LOI__c
        .field-meta.xml in this folder for the full reasoning behind this field group.

        ADDED 2026-08-25, one day after the other nine. Shape copied byte-for-byte from
        LOI_Counter_Received_Date__c.field-meta.xml beside it - the same kind of traversal: a
        Date formula that is a bare cross-object reference carries NO formulaTreatBlanksAs
        (there is no arithmetic for it to affect) and renders blank on a null parent.

        Date, not DateTime, and the name says Date accordingly (ARCHITECTURE.md section 1).
        The source field LOI__c.LOI_Signed_Date__c is itself a Date.

        🔴 WHY THIS EXISTS: IT TAKES LOI_Status__c's SLOT ON THE PAGE. On the LOI section of
        Disposition_Record_Page this field REPLACES Record.LOI_Status__c, which stays in the
        org but is no longer placed anywhere. The reason is recorded at length in
        DispositionDealSummaryService's DTO header (decision C-10) and restated on
        LOI_Status__c.field-meta.xml: NO AUTOMATION EVER SETS LOI__c.LOI_Status__c ON A SALE,
        so a disposition LOI holds its 'Draft' default forever and the section was printing
        "Draft" beside a real, advancing LOI Stage - a section contradicting itself.

        ⚠ THE SIGNED DATE IS REAL ON A SALE - AND THAT IS A RECENT FACT, NOT AN OLD ONE. Until
        2026-08-21 LOI_Signed_Date__c was structurally always blank on a disposition, because
        the LOI_Signed_Status_Sync before-save flow keys on Stage__c = 'Signed' and 'Signed'
        was the ACQUISITION terminal only. The user then made 'Signed' the DISPOSITION terminal
        too, and that flow carries NO record-type and NO lookup criterion, so it now fires on
        sell-side LOIs and stamps a genuine date. Do not "restore" the retracted reasoning.

        ⚠ THIS DOES NOT REOPEN DESIGN C-11. The dispositionDealSummary CARD still deliberately
        omits the signed date, and that omission is defended in three places on purpose. This
        is the record page's LOI fieldSection, a different surface with a different job (the
        card summarises a deal at a glance; the section is the LOI's own detail body).

        🔴 FLS: read-only in BOTH DPEG_Disposition_Edit and DPEG_Disposition_View - a formula
        field cannot carry editable = true (hard deploy error). Invisible to everyone, admins
        included, until those permission sets land with this file.
    -->
    <fullName>LOI_Signed_Date__c</fullName>
    <description>The primary LOI's LOI_Signed_Date__c, read through Primary_LOI__c. Blank before a primary LOI exists and until it reaches Stage__c = Signed, when LOI_Signed_Status_Sync stamps it. Replaces LOI_Status__c on the Disposition record page's LOI section.</description>
    <formula>Primary_LOI__r.LOI_Signed_Date__c</formula>
    <inlineHelpText>The date the primary LOI was signed. Read-only; derived.</inlineHelpText>
    <label>LOI Signed Date</label>
    <type>Date</type>
</CustomField>