force-app/main/default/objects/Disposition__c/fields/LOI_Status__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see Primary_LOI__c
        .field-meta.xml in this folder for the full reasoning behind this field group (why a
        lookup + formula pair rather than an Apex-backed LWC, and what it retracts).

        ADDED 2026-08-25. One of NINE formula fields mirroring the primary LOI's / primary
        PSA's own fields onto Disposition__c, shaped on the FIVE NDA_*__c fields already in
        this folder - read NDA_Broker__c.field-meta.xml for why a FORMULA is the route that
        makes this solvable at all (a FlexiPage fieldInstance cannot traverse a relationship;
        a formula can).

        TEXT(picklist), same pattern as NDA_Status__c.

        🔴 RETRACTED THE SAME DAY IT WAS WRITTEN - THIS FIELD IS NO LONGER ON ANY PAGE.
        The paragraph that stood here read, verbatim: "⚠ NOT THE SAME QUESTION AS
        LOI_Stage__c BESIDE IT, AND BOTH ARE ON THE SECTION ON PURPOSE. LOI__c carries
        Stage__c (where the record is in its walk) AND LOI_Status__c (Draft / Pending
        Approval / Approved / Rejected / ...), and the approval half is the one a reader of
        the disposition usually wants."
        That is true of an ACQUISITION LOI and false of a sale. NO AUTOMATION EVER SETS
        LOI__c.LOI_Status__c on a disposition - the LOI_Signed_Status_Sync flow's own header
        says so, and DispositionDealSummaryService's DTO header excludes the field for
        exactly this reason (decision C-10) - so it holds its 'Draft' default forever and the
        LOI section was printing "Draft" beside a real, advancing LOI Stage. On 2026-08-25 the
        Disposition record page's LOI fieldSection swapped this field's slot for
        LOI_Signed_Date__c, which IS stamped on a sale (see that field's own header).

        ⚠ THE FIELD IS DELIBERATELY KEPT, NOT DELETED. Removing a custom field needs a
        destructive deploy plus a manual Erase in Setup, which is not worth spending on a
        field nothing reads. Nothing in this repo references Disposition__c.LOI_Status__c
        outside this file, the two permission sets below and manifest/native-loi-psa - the
        LOI_Status__c hits elsewhere are LOI__c's OWN field, a different column. Before
        re-placing it anywhere, re-read C-10.

        🔴 FLS: THIS FIELD IS INVISIBLE TO EVERYONE, ADMINS INCLUDED, UNTIL A PERMSET LANDS.
        Read-only in BOTH DPEG_Disposition_Edit and DPEG_Disposition_View - a formula field
        cannot carry editable = true (hard deploy error). This file and both permission sets
        must land together.
    -->
    <fullName>LOI_Status__c</fullName>
    <description>The primary LOI's LOI_Status__c, read through Primary_LOI__c. NO LONGER PLACED ON ANY PAGE (2026-08-25): no automation sets it on a sale, so it held its Draft default beside a real LOI Stage. LOI_Signed_Date__c took its slot. Kept, not deleted.</description>
    <formula>TEXT(Primary_LOI__r.LOI_Status__c)</formula>
    <inlineHelpText>The approval status of the primary LOI for this disposition. Read-only; derived.</inlineHelpText>
    <label>LOI Status</label>
    <type>Text</type>
</CustomField>