force-app/main/default/objects/Disposition__c/fields/NDA_Date_Sent__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see NDA_Broker__c
        .field-meta.xml in this folder for the full reasoning behind this field group.
    -->
    <fullName>NDA_Date_Sent__c</fullName>
    <description>The primary NDA's Date_Sent__c, read through Primary_NDA__c. Blank before a primary NDA exists or before it has been sent.</description>
    <formula>Primary_NDA__r.Date_Sent__c</formula>
    <inlineHelpText>The date the primary NDA was sent. Read-only; derived.</inlineHelpText>
    <label>NDA Date Sent</label>
    <type>Date</type>
</CustomField>