force-app/main/default/objects/Disposition__c/fields/NDA_Date_Signed__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see NDA_Broker__c
        .field-meta.xml in this folder for the full reasoning behind this field group.
    -->
    <fullName>NDA_Date_Signed__c</fullName>
    <description>The primary NDA's Date_Signed__c, read through Primary_NDA__c. Blank before a primary NDA exists or before it has been signed.</description>
    <formula>Primary_NDA__r.Date_Signed__c</formula>
    <inlineHelpText>The date the primary NDA was signed. Read-only; derived.</inlineHelpText>
    <label>NDA Date Signed</label>
    <type>Date</type>
</CustomField>