force-app/main/default/objects/Disposition__c/fields/NDA_Expiry_Date__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see NDA_Broker__c
        .field-meta.xml in this folder for the full reasoning behind this field group.

        NAMED IDENTICALLY TO NDA__c.NDA_Expiry_Date__c - no collision risk, field API names are
        scoped per-object, and the identical name keeps the mirrored field self-explanatory on
        Disposition__c.
    -->
    <fullName>NDA_Expiry_Date__c</fullName>
    <description>The primary NDA's NDA_Expiry_Date__c, read through Primary_NDA__c. Blank before a primary NDA exists or before it carries an expiry date.</description>
    <formula>Primary_NDA__r.NDA_Expiry_Date__c</formula>
    <inlineHelpText>The expiry date of the primary NDA for this disposition. Read-only; derived.</inlineHelpText>
    <label>NDA Expiry Date</label>
    <type>Date</type>
</CustomField>